Fix save button alignment

--- a/styles/tasks/createTask.module.scss
+++ b/styles/tasks/createTask.module.scss
@@ -40,7 +40,7 @@
 	& > .input__btns {
 		display: flex;
 		align-items: center;
-		margin-left: 1em;
+		// margin-left: 1em;
 		margin-top: 0.6em;
 
 		& > .btn__save {
